[workspace]
resolver = "2"

members = [
    "account_storage",
    "accounts_on_demand",
    "common",
    "token_account_storage",
]

[workspace.package]
name = "solana-lite-account-manager"
version = "0.1.0"
edition = "2021"
authors = ["gmgalactus <gmgalactus@mango.markets>"]
repository = "https://github.com/blockworks-foundation/solana-lite-account-manager"
license = "AGPL"

[workspace.dependencies]
solana-sdk = "~1.18.15"
solana-rpc-client = "~1.18.15"
solana-account-decoder = "~1.18.15"
solana-client = "~1.18.15"
solana-program = "~1.18.15"

dashmap = "5.4.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
itertools = "0.10.5"
borsh = "0.10.3"
anyhow = "1.0.70"
log = "0.4.17"
bincode = "=1.3.3"
bs58 = "0.4.0"
lz4 = "1.24.0"
zstd = "0.11.2"
prometheus = "0.13.3"
lazy_static = "1.4.0"
base64 = "0.21.0"
futures = "0.3.28"
tracing-subscriber = "0.3.16"
bitflags = "2.6.0"
arrayref = "0.3.7"

# spl token
spl-token = "~4.0.0"
spl-token-2022 = "~3.0.0"

lite-account-manager-common = {path = "common", version="0.1.0"}
lite-account-storage = {path = "account_storage", version="0.1.0"}
lite-accounts-on-demand = {path = "accounts_on_demand", version="0.1.0"}
lite-token-account-storage = {path = "token_account_storage", version="0.1.0"}