[workspace]
resolver = "2"

members = [
    "account_storage",
    "accounts_from_snapshot",
    "accounts_on_demand",
    "common",
    "load_tester",
    "simulate_from_snapshot",
    "token_account_storage",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["gmgalactus <gmgalactus@mango.markets>"]
repository = "https://github.com/blockworks-foundation/solana-lite-account-manager"
license = "AGPL"

[workspace.dependencies]
solana-logger = "~2.0.16"
solana-sdk = "~2.0.16"
solana-rpc-client = "~2.0.16"
solana-account-decoder = "~2.0.16"
solana-client = "~2.0.16"
solana-program = "~2.0.16"
solana-accounts-db = "~2.0.16"
solana-frozen-abi-macro = "~2.0.16"
solana-runtime = "~2.0.16"
solana-rpc-client-api = "~2.0.16"
solana-download-utils = "~2.0.16"

anyhow = "1.0.70"
arrayref = "0.3.7"
async-trait = "0.1.68"
base64 = "0.21.0"
bincode = "=1.3.3"
bitflags = "2.6.0"
borsh = "0.10.3"
bs58 = "0.4.0"
dashmap = "5.4.0"
futures = "0.3.28"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
lz4 = "1.24.0"
prometheus = "0.13.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.2.0"
tracing-subscriber = "0.3.16"
zstd = "0.11.2"

spl-token = "6.0.0"
spl-token-2022 = "5.0.2"

thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }

yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v2.0.0+solana.2.0.16" }
geyser-grpc-connector = { git = "https://github.com/blockworks-foundation/geyser-grpc-connector.git", tag = "v0.11.0+yellowstone.2.0.0+solana.2.0" }

lite-account-manager-common = { path = "common", version = "0.1.0" }
lite-account-storage = { path = "account_storage", version = "0.1.0" }
lite-accounts-from-snapshot = { path = "accounts_from_snapshot", version = "0.1.0" }
lite-accounts-on-demand = { path = "accounts_on_demand", version = "0.1.0" }
lite-token-account-storage = { path = "token_account_storage", version = "0.1.0" }

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
