[package]
name = "lite-account-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = {workspace = true}
lite-account-manager-common = {workspace = true}
dashmap = {workspace = true}
itertools = { workspace = true }
futures = { workspace = true }
lazy_static = {workspace = true}
prometheus = {workspace = true}
log = {workspace = true}
bincode = {workspace = true}

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
base64 = "0.21.0"
bs58 = "0.4.0"