[package]
name = "lite-account-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
lite-account-manager-common = { workspace = true }
lite-accounts-from-snapshot = { workspace = true }

yellowstone-grpc-proto = { workspace = true }
geyser-grpc-connector = { workspace = true }

solana-accounts-db = { workspace = true }
solana-sdk = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }

prometheus = { workspace = true }

dashmap = { workspace = true }

log = { workspace = true }
env_logger = "0.9.0"
clap = { version = "4.5.24", features = ["derive"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
bincode = { workspace = true }
crossbeam-channel = "0.5.13"
rayon = "1.10.0"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
base64 = "0.21.0"
bs58 = "0.4.0"