[package]
name = "lite-accounts-from-snapshot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Find and read account data from snapshot files"
keywords = ["solana"]
publish = false

[dependencies]
lite-account-manager-common = { workspace = true }

solana-download-utils = { workspace = true }
solana-runtime = { workspace = true }
solana-logger = { workspace = true }
solana-sdk = { workspace = true }
# required for snapshot reading
solana-accounts-db = { workspace = true }
# required for snapshot reading
memmap2 = "0.5.5"

tokio = { workspace = true }
futures = { workspace = true }

log = { workspace = true }
tracing-subscriber = "0.3.19"
regex = { version = "1.11.0", features = [] }
lazy_static = "1.5.0"
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = "1.3.3"
env_logger = "0.9.0"
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = "0.4.38"
zstd = "0.11.2"
thiserror = { workspace = true }

# loader
reqwest = { version = "0.12.9", features = [
    "blocking",
    "brotli",
    "deflate",
    "gzip",
    "rustls-tls",
    "json",
] }


[dev-dependencies]
clap = { version = "4.5.24", features = ["derive"] }

