[package]
name = "lite-account-manager-common"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = {workspace = true}
solana-rpc-client-api = "~1.18.15" 
tokio = {workspace = true, features = ["full"]}
itertools = {workspace = true}
lz4 = {workspace = true}
zstd = {workspace = true}
async-trait = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
bs58 = {workspace = true}
base64 = {workspace = true}
anyhow = {workspace = true}