[package]
name = "lite-accounts-simulate_from_snapshot"
version = "0.1.0"
edition = "2021"

[dependencies]
lite-account-manager-common = { workspace = true }
lite-account-storage = { workspace = true }
lite-token-account-storage = { workspace = true }

solana-sdk = {workspace = true}
solana-client = {workspace = true}
solana-accounts-db = {workspace = true}
solana-frozen-abi-macro = {workspace = true}
solana-runtime = {workspace = true}
solana-rpc-client-api = { workspace = true }
solana-account-decoder = { workspace = true }

itertools = { workspace = true }
futures = { workspace = true }
lazy_static = {workspace = true}
prometheus = {workspace = true}
log = {workspace = true}
bincode = {workspace = true}
serde = { workspace = true }
anyhow = { workspace = true }

clap = { version = "4.5.4", features = ["derive"] }
memmap2 = "0.5.5"
thiserror = "1.0.31"
tar = "0.4.38"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"]}
zstd = "0.13.2"
async-trait = "0.1.73"
env_logger = "0.9.0"
base64 = "0.21.0"

jsonrpsee = { version = "0.20.0", features = ["macros", "full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }


quic-geyser-client = { git = "https://github.com/blockworks-foundation/quic_geyser_plugin.git", branch = "main" }
quic-geyser-common = { git = "https://github.com/blockworks-foundation/quic_geyser_plugin.git", branch = "main" }