[package]
name = "lite-token-account-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = {workspace = true}
solana-program = {workspace = true}
spl-token = {workspace = true}
spl-token-2022 = {workspace = true}

lite-account-manager-common = {workspace = true}
dashmap = {workspace = true}
itertools = { workspace = true }
futures = { workspace = true }
lazy_static = {workspace = true}
prometheus = {workspace = true}
log = {workspace = true}
serde = {workspace = true}
anyhow = {workspace = true}
bincode = {workspace = true}
lz4 = {workspace = true}
bitflags = {workspace = true}
arrayref = {workspace = true}

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
tracing-subscriber = {workspace = true}